tests/ast_interpreter/err_fun_arity_too_many.nx
fun add(a, b) {
    print(a + b);
}

fun main() {
    add(1, 2, 3);
}